--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
+    <header>
+      <div class="logo">
+        <img src=".\resources\images\img-myt-logo.jpg">
+        <span>My Times</span>
+      </div>
+      <div class="nav">
+        <ul>
+          <li><a href="#world">World</a></li>
+          <li><a href="#us">U.S.</a></li>
+          <li><a href="#tech">Tech</a></li>
+          <li><a href="#science">Science</a></li>
+        </ul>
+      </div>
 
+    </header>
   </body>
 </html>
